Fix: Fix alignment.

--- a/pages/impact/impact.module.scss
+++ b/pages/impact/impact.module.scss
@@ -368,6 +368,7 @@
   }
 
   .intercomButtonWrap {
+    text-align: center;
     padding-top: 1rem;
     button {
       background-color: $watermelon;
